# NastyTetris

./: .gitmodules  CMakeLists.txt  README.md  gameArea.cpp  gameArea.h  gameBlock.cpp  gameBlock.h  main.cpp  planning.txt
deprecated/: about.md  gameArea.h  gameBlock.cpp  gameBlock.h
